fixed chart clipping issue on mobile

--- a/css/data320.css
+++ b/css/data320.css
@@ -14,7 +14,7 @@
   height:400px;
   margin: 0px auto 50px auto;
   width: 90%;
-
+  overflow: visible;
 }
 
 #energySection .icon {
